--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modern-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/gaming-hub",
+  "homepage": "https://tactualcoder24.github.io/gaming-hub",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
